--- a/OnlineComputerStore/packages.config
+++ b/OnlineComputerStore/packages.config
@@ -17,6 +17,10 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
