--- a/OnlineComputerStore/Web.config
+++ b/OnlineComputerStore/Web.config
@@ -18,6 +18,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="~/Error/Problem"
+                  redirectMode="ResponseRewrite">
+      <error statusCode="500"
+             redirect="~/Error/ServerProblems"/>
+      <error statusCode="404"
+             redirect="~/Error/NotFound"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -27,6 +34,11 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="~/Error/NotFound"
+             responseMode="ExecuteURL"/>
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="TelemetryCorrelationHttpModule" />
